加入期末報告

--- a/config/content.htm
+++ b/config/content.htm
@@ -52,5 +52,8 @@
 <p>我的想法是聯想到，一般機車上的避震器的樣子，藉由彈簧來吸震。</p>
 <p><img alt="" height="425" src="/images/solvespace_xnsLtJUdwZ.png" width="800"/></p>
 <p><img alt="" height="425" src="/images/solvespace_aOUkuZVPQo.png" width="800"/></p>
-<p></p><h1>期中報告</h1>
+<p></p>
+<h1>期末報告</h1>
+<p>簡報連結:<a href="https://s40523113.github.io/cad2019/reveal/index.html#/">https://s40523113.github.io/cad2019/reveal/index.html#/</a></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Sr3WvZG0GV8" width="560"></iframe></p><h1>期中報告</h1>
 <p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/E02IbI4DUNU" width="560"></iframe></p>
