--- a/content/期末報告.html
+++ b/content/期末報告.html
@@ -154,10 +154,9 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w3 << <a href='w3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6<br /><h1>w5</h1>
-<p>介紹solvespace基本功能</p>
-<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/MksM1VQJhYY" width="560"></iframe></p>
-<br />w3 << <a href='w3.html'>Previous</a> <a href='w6.html'>Next</a> >> w6</div>
+    <div id="tipue_search_content">w17 << <a href='w17.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告<br /><h1>期末報告</h1>
+<p>簡報連結:<a href="https://s40523113.github.io/cad2019/reveal/index.html#/">https://s40523113.github.io/cad2019/reveal/index.html#/</a></p>
+<p><iframe allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/Sr3WvZG0GV8" width="560"></iframe></p><br />w17 << <a href='w17.html'>Previous</a> <a href='期中報告.html'>Next</a> >> 期中報告</div>
         
     <!-- footer -->
       <div class="container">
